@@ -24,16 +24,18 @@
  */
 package com.oracle.svm.driver;
 
+import static com.oracle.svm.core.util.EnvVariableUtils.EnvironmentVariable;
+
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.PrintStream;
 import java.lang.module.FindException;
 import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.module.ModuleReference;
-import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -59,6 +61,7 @@ import java.util.Optional;
 import java.util.Queue;
 import java.util.Set;
 import java.util.StringJoiner;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.BiConsumer;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
@@ -80,11 +83,14 @@ import com.oracle.graal.pointsto.reports.ReportUtils;
 import com.oracle.svm.common.option.CommonOptions;
 import com.oracle.svm.core.FallbackExecutor;
 import com.oracle.svm.core.FallbackExecutor.Options;
+import com.oracle.svm.core.JavaVersionUtil;
 import com.oracle.svm.core.NativeImageClassLoaderOptions;
 import com.oracle.svm.core.OS;
+import com.oracle.svm.core.SharedConstants;
 import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.VM;
+import com.oracle.svm.core.imagelayer.LayeredImageOptions;
 import com.oracle.svm.core.option.BundleMember;
 import com.oracle.svm.core.option.OptionOrigin;
 import com.oracle.svm.core.option.OptionUtils;
@@ -103,11 +109,9 @@ import com.oracle.svm.hosted.NativeImageSystemClassLoader;
 import com.oracle.svm.hosted.util.JDKArgsUtils;
 import com.oracle.svm.util.LogUtils;
 import com.oracle.svm.util.ModuleSupport;
-import com.oracle.svm.util.ReflectionUtil;
 import com.oracle.svm.util.StringUtil;
 
 import jdk.graal.compiler.options.OptionKey;
-import jdk.graal.compiler.serviceprovider.JavaVersionUtil;
 import jdk.internal.jimage.ImageReader;
 
 public class NativeImage {
@@ -115,7 +119,6 @@ public class NativeImage {
     private static final String DEFAULT_GENERATOR_CLASS_NAME = NativeImageGeneratorRunner.class.getName();
     private static final String DEFAULT_GENERATOR_MODULE_NAME = NativeImageGeneratorRunner.class.getModule().getName();
 
-    private static final String DEFAULT_GENERATOR_9PLUS_SUFFIX = "$JDK9Plus";
     private static final String CUSTOM_SYSTEM_CLASS_LOADER = NativeImageSystemClassLoader.class.getCanonicalName();
 
     static final boolean IS_AOT = Boolean.getBoolean("com.oracle.graalvm.isaot");
@@ -131,6 +134,16 @@ public class NativeImage {
     static final String graalvmVendorVersion = VM.getVendorVersion();
     private static final String ALL_UNNAMED = "ALL-UNNAMED";
     static final String graalvmVersion = System.getProperty("org.graalvm.version", "dev");
+
+    /**
+     * The path to a temporary directory that is available during the process lifetime of the
+     * driver. The builder process can retrieve the directory path through the environment variable
+     * {@link SharedConstants#DRIVER_TEMP_DIR_ENV_VARIABLE}. The directory is created via
+     * {@link ArchiveSupport#createTempDir} and is therefore removed by the
+     * {@link Runtime#addShutdownHook shutdown hook}.
+     */
+    private final Path driverTempDir;
+    private static final String DRIVER_TEMP_DIR_PREFIX = "driverRoot-";
 
     private static Map<String, String[]> getCompilerFlags() {
         Map<String, String[]> result = new HashMap<>();
@@ -271,14 +284,13 @@ public class NativeImage {
     final String oHUseLibC = oH(SubstrateOptions.UseLibC);
     final String oHEnableStaticExecutable = oHEnabled(SubstrateOptions.StaticExecutable);
     final String oHEnableSharedLibraryFlagPrefix = oHEnabled + SubstrateOptions.SharedLibrary.getName();
-    final String oHEnableImageLayerFlagPrefix = oH + SubstrateOptions.LayerCreate.getName();
+    final String oHEnableImageLayerFlagPrefix = oH + LayeredImageOptions.LayerCreate.getName();
     final String oHColor = oH(SubstrateOptions.Color);
     final String oHEnableBuildOutputProgress = oHEnabledByDriver(SubstrateOptions.BuildOutputProgress);
     final String oHEnableBuildOutputLinks = oHEnabledByDriver(SubstrateOptions.BuildOutputLinks);
     final String oHCLibraryPath = oH(SubstrateOptions.CLibraryPath);
     final String oHFallbackThreshold = oH(SubstrateOptions.FallbackThreshold);
     final String oHFallbackExecutorJavaArg = oH(FallbackExecutor.Options.FallbackExecutorJavaArg);
-    final String oHNativeImageOptionsEnvVar = oH(SubstrateOptions.BuildOutputNativeImageOptionsEnvVarValue, OptionOrigin.originDriver);
     final String oRRuntimeJavaArg = oR(Options.FallbackExecutorRuntimeJavaArg);
     final String oHTraceClassInitialization = oH(SubstrateOptions.TraceClassInitialization);
     final String oHTraceObjectInstantiation = oH(SubstrateOptions.TraceObjectInstantiation);
@@ -286,13 +298,12 @@ public class NativeImage {
 
     final String oHInspectServerContentPath = oH(PointstoOptions.InspectServerContentPath);
     final String oHDeadlockWatchdogInterval = oH(SubstrateOptions.DeadlockWatchdogInterval);
-    final String oHLayerCreate = oH(SubstrateOptions.LayerCreate);
+    final String oHLayerCreate = oH(LayeredImageOptions.LayerCreate);
 
     final Map<String, String> imageBuilderEnvironment = new HashMap<>();
     private final ArrayList<String> imageBuilderArgs = new ArrayList<>();
     private final Set<String> imageBuilderUniqueLeftoverArgs = Collections.newSetFromMap(new IdentityHashMap<>());
     private final LinkedHashSet<Path> imageBuilderModulePath = new LinkedHashSet<>();
-    private final LinkedHashSet<Path> imageBuilderClasspath = new LinkedHashSet<>();
     private final LinkedHashSet<Path> imageProvidedJars = new LinkedHashSet<>();
     private final ArrayList<String> imageBuilderJavaArgs = new ArrayList<>();
     private final LinkedHashSet<Path> imageClasspath = new LinkedHashSet<>();
@@ -326,6 +337,10 @@ public class NativeImage {
     BundleSupport bundleSupport;
     private final ArchiveSupport archiveSupport;
 
+    /**
+     * When running the Native Image Driver on Espresso with SVM, the available VM flags differ from
+     * those on HotSpot. This accounts for that.
+     */
     public record HostFlags(
                     boolean useJVMCINativeLibrary,
                     boolean hasUseJVMCICompiler,
@@ -333,19 +348,41 @@ public class NativeImage {
                     boolean hasGCTimeRatio,
                     boolean hasExitOnOutOfMemoryError,
                     boolean hasMaximumHeapSizePercent,
-                    boolean hasUseParallelGC) {
+                    boolean hasUseParallelGC,
+                    boolean hasUseCompressedOops) {
+
+        public List<String> defaultMemoryFlags() {
+            List<String> flags = new ArrayList<>();
+            if (hasUseParallelGC) {
+                // native image generation is a throughput-oriented task
+                flags.add("-XX:+UseParallelGC");
+            }
+            if (hasGCTimeRatio) {
+                /*
+                 * Optimize for throughput by increasing the goal of the total time for garbage
+                 * collection from 1% to 10% (N=9). This also reduces peak RSS.
+                 */
+                flags.add("-XX:GCTimeRatio=9"); // 1/(1+N) time for GC
+            }
+            if (hasExitOnOutOfMemoryError) {
+                /*
+                 * Let the builder exit on first OutOfMemoryError to have shorter feedback loops.
+                 */
+                flags.add("-XX:+ExitOnOutOfMemoryError");
+            }
+            if (hasUseCompressedOops) {
+                /*
+                 * To print a warning if the max heap size is too large for compressed oops.
+                 */
+                flags.add("-XX:+UseCompressedOops");
+            }
+            return flags;
+        }
     }
 
     protected static class BuildConfiguration {
-        /*
-         * Reuse com.oracle.svm.util.ModuleSupport.isModulePathBuild() to ensure same interpretation
-         * of com.oracle.svm.util.ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM environment variable use.
-         */
-        private static final Method isModulePathBuild = ReflectionUtil.lookupMethod(ModuleSupport.class, "isModulePathBuild");
-        private static final String JAVA_EXECUTABLE_OVERRIDE = System.getProperty("com.oracle.svm.driver.java.executable.override");
 
-        protected boolean modulePathBuild;
-        String imageBuilderModeEnforcer;
+        private static final String JAVA_EXECUTABLE_OVERRIDE = System.getProperty("com.oracle.svm.driver.java.executable.override");
 
         protected final Path workDir;
         protected final Path rootDir;
@@ -353,15 +390,15 @@ public class NativeImage {
         protected final List<String> args;
 
         private HostFlags hostFlags;
+        private Path driverTempDir;
 
         BuildConfiguration(BuildConfiguration original) {
-            modulePathBuild = original.modulePathBuild;
-            imageBuilderModeEnforcer = original.imageBuilderModeEnforcer;
             workDir = original.workDir;
             rootDir = original.rootDir;
             libJvmciDir = original.libJvmciDir;
             args = original.args;
             hostFlags = original.hostFlags;
+            driverTempDir = original.driverTempDir;
         }
 
         protected BuildConfiguration(List<String> args) {
@@ -369,12 +406,6 @@ public class NativeImage {
         }
 
         BuildConfiguration(Path rootDir, Path workDir, List<String> args) {
-            try {
-                modulePathBuild = (boolean) isModulePathBuild.invoke(null);
-            } catch (ReflectiveOperationException | ClassCastException e) {
-                VMError.shouldNotReachHere(e);
-            }
-            imageBuilderModeEnforcer = null;
             this.args = Collections.unmodifiableList(args);
             this.workDir = workDir != null ? workDir : Paths.get(".").toAbsolutePath().normalize();
             if (rootDir != null) {
@@ -409,11 +440,7 @@ public class NativeImage {
          * @return The image generator main class entry point.
          */
         public List<String> getGeneratorMainClass() {
-            if (modulePathBuild) {
-                return Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME);
-            } else {
-                return List.of(DEFAULT_GENERATOR_CLASS_NAME + DEFAULT_GENERATOR_9PLUS_SUFFIX);
-            }
+            return Arrays.asList("--module", DEFAULT_GENERATOR_MODULE_NAME + "/" + DEFAULT_GENERATOR_CLASS_NAME);
         }
 
         /**
@@ -458,24 +485,6 @@ public class NativeImage {
         }
 
         /**
-         * @return classpath for SubstrateVM image builder components
-         */
-        public List<Path> getBuilderClasspath() {
-            if (modulePathBuild) {
-                return Collections.emptyList();
-            }
-            List<Path> result = new ArrayList<>();
-            if (libJvmciDir != null) {
-                result.addAll(getJars(libJvmciDir, "graal-sdk", "graal", "enterprise-graal"));
-            }
-            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            if (!modulePathBuild) {
-                result.addAll(createTruffleBuilderModulePath());
-            }
-            return result;
-        }
-
-        /**
          * @return base clibrary paths needed for general image building
          */
         public List<Path> getBuilderCLibrariesPaths() {
@@ -511,6 +520,12 @@ public class NativeImage {
             return getJars(rootDir.resolve(Paths.get("lib", "svm")));
         }
 
+        protected void setDriverTempDir(Path tempDir) {
+            Objects.requireNonNull(tempDir);
+            VMError.guarantee(Files.isDirectory(tempDir));
+            this.driverTempDir = tempDir;
+        }
+
         public HostFlags getHostFlags() {
             if (hostFlags == null) {
                 hostFlags = gatherHostFlags();
@@ -526,6 +541,7 @@ public class NativeImage {
             boolean hasGCTimeRatio = false;
             boolean hasExitOnOutOfMemoryError = false;
             boolean hasUseParallelGC = false;
+            boolean hasUseCompressedOops = false;
 
             ProcessBuilder pb = new ProcessBuilder();
             sanitizeJVMEnvironment(pb.environment(), Map.of());
@@ -556,6 +572,8 @@ public class NativeImage {
                             hasMaximumHeapSizePercent = true;
                         } else if (line.contains(" UseParallelGC ")) {
                             hasUseParallelGC = true;
+                        } else if (line.contains(" UseCompressedOops ")) {
+                            hasUseCompressedOops = true;
                         }
                     }
                 }
@@ -575,7 +593,8 @@ public class NativeImage {
                             hasGCTimeRatio,
                             hasExitOnOutOfMemoryError,
                             hasMaximumHeapSizePercent,
-                            hasUseParallelGC);
+                            hasUseParallelGC,
+                            hasUseCompressedOops);
         }
 
         /**
@@ -600,44 +619,13 @@ public class NativeImage {
             }
 
             for (String line : flagsForVersion) {
-                if (!modulePathBuild && line.startsWith("--add-exports=")) {
-                    /*-
-                     * Turns e.g.
-                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=jdk.graal.compiler,org.graalvm.nativeimage.builder
-                     * into:
-                     * --add-exports=jdk.internal.vm.ci/jdk.vm.ci.code.stack=ALL-UNNAMED
-                     */
-                    builderJavaArgs.add(line.substring(0, line.lastIndexOf('=') + 1) + ALL_UNNAMED);
-                } else {
-                    builderJavaArgs.add(line);
-                }
+                builderJavaArgs.add(line);
             }
 
             if (getHostFlags().useJVMCINativeLibrary()) {
                 builderJavaArgs.add("-XX:+UseJVMCINativeLibrary");
             } else if (getHostFlags().hasUseJVMCICompiler()) {
                 builderJavaArgs.add("-XX:-UseJVMCICompiler");
-
-                if (JavaVersionUtil.JAVA_SPEC == 21) {
-                    Runtime.Version version = Runtime.version();
-                    if (version.interim() == 0 && version.update() < 4) {
-                        /*
-                         * Native Image regularly crashes due to JDK-8328702. In JDK 21, the fix
-                         * only landed in 20.0.4 so in earlier JDK 21 versions, disable C2. This
-                         * workaround can be removed when GR-55515, GR-60648 or GR-60669 is
-                         * resolved.
-                         */
-                        builderJavaArgs.add("-XX:TieredStopAtLevel=1");
-
-                        /*
-                         * From the java man page section on ReservedCodeCacheSize: "the default
-                         * maximum code cache size is 240 MB; if you disable tiered compilation ...
-                         * then the default size is 48 MB". Experience shows that Native Image needs
-                         * the larger code cache, even when C2 is disabled.
-                         */
-                        builderJavaArgs.add("-XX:ReservedCodeCacheSize=240M");
-                    }
-                }
             }
 
             return builderJavaArgs;
@@ -656,10 +644,8 @@ public class NativeImage {
                 result.addAll(getJars(libJvmciDir, "enterprise-graal"));
                 result.addAll(getJars(libJvmciDir, "word", "collections", "nativeimage", "nativeimage-libgraal"));
             }
-            if (modulePathBuild) {
-                result.addAll(createTruffleBuilderModulePath());
-                result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
-            }
+            result.addAll(createTruffleBuilderModulePath());
+            result.addAll(getJars(rootDir.resolve(Paths.get("lib", "svm", "builder"))));
             return result;
         }
 
@@ -736,24 +722,22 @@ public class NativeImage {
             Map<String, String> properties = null;
             if (isNativeImagePropertiesFile) {
                 properties = ArchiveSupport.loadProperties(Files.newInputStream(resourcePath));
-                if (config.modulePathBuild) {
-                    String forceOnModulePath = properties.get("ForceOnModulePath");
-                    if (forceOnModulePath != null) {
-                        try {
-                            ModuleFinder finder = ModuleFinder.of(classpathEntry);
-                            ModuleReference ref = finder.find(forceOnModulePath).orElse(null);
-                            if (ref == null) {
-                                throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
-                                                " was not found in class-path entry: " + classpathEntry + ".");
-                            }
-                        } catch (FindException e) {
+                String forceOnModulePath = properties.get("ForceOnModulePath");
+                if (forceOnModulePath != null) {
+                    try {
+                        ModuleFinder finder = ModuleFinder.of(classpathEntry);
+                        ModuleReference ref = finder.find(forceOnModulePath).orElse(null);
+                        if (ref == null) {
                             throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
-                                            " could not be resolved with class-path entry: " + classpathEntry + ".", e);
+                                            " was not found in class-path entry: " + classpathEntry + ".");
                         }
-                        addImageModulePath(classpathEntry, true, false);
-                        addAddedModules(forceOnModulePath);
-                        ignoreClasspathEntry = true;
+                    } catch (FindException e) {
+                        throw showError("Failed to process ForceOnModulePath attribute: Module descriptor for the module " + forceOnModulePath +
+                                        " could not be resolved with class-path entry: " + classpathEntry + ".", e);
                     }
+                    addImageModulePath(classpathEntry, true, false);
+                    addAddedModules(forceOnModulePath);
+                    ignoreClasspathEntry = true;
                 }
             }
 
@@ -934,6 +918,9 @@ public class NativeImage {
         apiOptionHandler = new APIOptionHandler(this);
         registerOptionHandler(apiOptionHandler);
         registerOptionHandler(new MacroOptionHandler(this));
+
+        this.driverTempDir = config.driverTempDir != null ? config.driverTempDir : archiveSupport.createTempDir(DRIVER_TEMP_DIR_PREFIX, new AtomicBoolean(true));
+        config.setDriverTempDir(this.driverTempDir);
     }
 
     void addMacroOptionRoot(Path configDir) {
@@ -946,29 +933,35 @@ public class NativeImage {
         optionHandlers.add(handler);
     }
 
+    private List<String> defaultNativeImageArgs = null;
+
     private List<String> getDefaultNativeImageArgs() {
-        List<String> defaultNativeImageArgs = new ArrayList<>();
-        String propertyOptions = userConfigProperties.get("NativeImageArgs");
-        if (propertyOptions != null) {
-            Collections.addAll(defaultNativeImageArgs, propertyOptions.split(" +"));
-        }
-        final String envVarName = SubstrateOptions.NATIVE_IMAGE_OPTIONS_ENV_VAR;
-        String nativeImageOptionsValue = System.getenv(envVarName);
-        if (nativeImageOptionsValue != null) {
-            defaultNativeImageArgs.addAll(JDKArgsUtils.parseArgsFromEnvVar(nativeImageOptionsValue, envVarName, msg -> showError(msg)));
-        }
-        if (!defaultNativeImageArgs.isEmpty()) {
-            String buildApplyOptionName = BundleSupport.BundleOptionVariants.apply.optionName();
-            if (config.getBuildArgs().stream().noneMatch(arg -> arg.startsWith(buildApplyOptionName + "="))) {
-                if (nativeImageOptionsValue != null) {
-                    addPlainImageBuilderArg(oHNativeImageOptionsEnvVar + nativeImageOptionsValue);
+        if (defaultNativeImageArgs == null) {
+            List<String> args = new ArrayList<>();
+            String propertyOptions = userConfigProperties.get("NativeImageArgs");
+            if (propertyOptions != null) {
+                Collections.addAll(args, propertyOptions.split(" +"));
+            }
+            final String envVarName = SubstrateOptions.NATIVE_IMAGE_OPTIONS_ENV_VAR;
+            String nativeImageOptionsValue = System.getenv(envVarName);
+            if (nativeImageOptionsValue != null) {
+                args.addAll(JDKArgsUtils.parseArgsFromEnvVar(nativeImageOptionsValue, envVarName, msg -> showError(msg)));
+            }
+            if (!args.isEmpty()) {
+                String buildApplyOptionName = BundleSupport.BundleOptionVariants.apply.optionName();
+                if (config.getBuildArgs().stream().noneMatch(arg -> arg.startsWith(buildApplyOptionName + "="))) {
+                    if (nativeImageOptionsValue != null) {
+                        LogUtils.info("Picked up " + envVarName, nativeImageOptionsValue);
+                    }
+                    defaultNativeImageArgs = List.copyOf(args);
+                } else {
+                    LogUtils.warning("Option '" + buildApplyOptionName + "' in use. Ignoring environment variables " + envVarName + " and " + NativeImage.CONFIG_FILE_ENV_VAR_KEY + ".");
                 }
-                return List.copyOf(defaultNativeImageArgs);
             } else {
-                LogUtils.warning("Option '" + buildApplyOptionName + "' in use. Ignoring environment variables " + envVarName + " and " + NativeImage.CONFIG_FILE_ENV_VAR_KEY + ".");
+                defaultNativeImageArgs = List.of();
             }
         }
-        return List.of();
+        return defaultNativeImageArgs;
     }
 
     static void ensureDirectoryExists(Path dir) {
@@ -987,7 +980,7 @@ public class NativeImage {
 
     private void prepareImageBuildArgs() {
         addImageBuilderJavaArgs("-Xss10m");
-        addImageBuilderJavaArgs(MemoryUtil.determineMemoryFlags(config.getHostFlags()));
+        addImageBuilderJavaArgs(config.getHostFlags().defaultMemoryFlags());
 
         /* Prevent JVM that runs the image builder to steal focus. */
         addImageBuilderJavaArgs("-Djava.awt.headless=true");
@@ -1181,8 +1174,6 @@ public class NativeImage {
         processNativeImageArgs();
         apiOptionHandler.validateExperimentalOptions();
 
-        config.getBuilderClasspath().forEach(this::addImageBuilderClasspath);
-
         if (config.getBuilderInspectServerPath() != null) {
             addPlainImageBuilderArg(oHInspectServerContentPath + config.getBuilderInspectServerPath());
         }
@@ -1264,6 +1255,17 @@ public class NativeImage {
 
         addImageBuilderJavaArgs(customJavaArgs.toArray(new String[0]));
 
+        List<String> userMemoryFlags = new ArrayList<>();
+        for (String arg : imageBuilderJavaArgs) {
+            if (MemoryUtil.isMemoryFlag(arg)) {
+                userMemoryFlags.add(arg);
+            }
+        }
+        List<String> memoryFlagsToAdd = MemoryUtil.heuristicMemoryFlags(config.getHostFlags(), userMemoryFlags);
+        for (String memoryFlag : memoryFlagsToAdd.reversed()) {
+            imageBuilderJavaArgs.addFirst(memoryFlag);
+        }
+
         /* Perform option consolidation of imageBuilderArgs */
 
         imageBuilderJavaArgs.addAll(getAgentArguments());
@@ -1302,8 +1304,7 @@ public class NativeImage {
                 boolean hasMainClass = mainClass != null && !mainClass.isEmpty();
                 if (extraImageArgs.isEmpty()) {
                     if (buildExecutable && !hasMainClassModule && !hasMainClass && !listModules) {
-                        String moduleMsg = config.modulePathBuild ? " (or <module>/<mainclass>)" : "";
-                        showError("Please specify class" + moduleMsg + " containing the main entry point method. (see --help)");
+                        showError("Please specify class (or <module>/<mainclass>) containing the main entry point method. (see --help)");
                     }
                 } else if (!moduleOptionMode) {
                     /* extraImageArgs main-class overrules previous main-class specification */
@@ -1419,14 +1420,10 @@ public class NativeImage {
         LinkedHashSet<Path> finalImageClasspath = new LinkedHashSet<>(imageClasspath);
 
         LinkedHashSet<Path> finalImageProvidedJars = new LinkedHashSet<>(this.imageProvidedJars);
-        if (config.modulePathBuild) {
-            finalImageProvidedJars.addAll(config.getImageProvidedModulePath());
-            finalImageModulePath.addAll(finalImageProvidedJars);
-        } else {
-            finalImageProvidedJars.addAll(config.getImageProvidedClasspath());
-            finalImageClasspath.addAll(finalImageProvidedJars);
-        }
+        finalImageProvidedJars.addAll(config.getImageProvidedModulePath());
+        finalImageModulePath.addAll(finalImageProvidedJars);
         finalImageProvidedJars.forEach(this::processClasspathNativeImageMetaInf);
+        imageBuilderJavaArgs.add("-D" + SharedConstants.IMAGE_PROVIDED_JARS_ENV_VARIABLE + "=" + String.join(File.pathSeparator, finalImageProvidedJars.stream().map(Path::toString).toList()));
 
         if (!config.buildFallbackImage()) {
             Optional<ArgumentEntry> fallbackThresholdEntry = getHostedOptionArgument(imageBuilderArgs, oHFallbackThreshold);
@@ -1439,18 +1436,20 @@ public class NativeImage {
         if (!limitModules.isEmpty()) {
             imageBuilderJavaArgs.add("-D" + ModuleSupport.PROPERTY_IMAGE_EXPLICITLY_LIMITED_MODULES + "=" + String.join(",", limitModules));
         }
-        if (config.modulePathBuild && !finalImageClasspath.isEmpty()) {
+        if (!finalImageClasspath.isEmpty()) {
             imageBuilderJavaArgs.add(DefaultOptionHandler.addModulesOption + "=ALL-DEFAULT");
         }
         // allow native access for all modules on the image builder module path
         var enableNativeAccessModules = getModulesFromPath(imageBuilderModulePath).keySet();
         imageBuilderJavaArgs.add("--enable-native-access=" + String.join(",", enableNativeAccessModules));
+        // pass the number of warnings to the builder process
+        imageBuilderArgs.add(oH(SubstrateOptions.DriverWarningsCount) + LogUtils.getWarningsCount());
 
         boolean useColorfulOutput = configureBuildOutput();
 
         List<String> finalImageBuilderJavaArgs = Stream.concat(config.getBuilderJavaArgs().stream(), imageBuilderJavaArgs.stream()).collect(Collectors.toList());
         try {
-            return buildImage(finalImageBuilderJavaArgs, imageBuilderClasspath, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
+            return buildImage(finalImageBuilderJavaArgs, imageBuilderModulePath, imageBuilderArgs, finalImageClasspath, finalImageModulePath);
         } finally {
             if (useColorfulOutput) {
                 performANSIReset();
@@ -1623,7 +1622,7 @@ public class NativeImage {
 
     protected Path createVMInvocationArgumentFile(List<String> arguments) {
         try {
-            Path argsFile = Files.createTempFile("vminvocation", ".args");
+            Path argsFile = createFileInTempDir("vminvocation.args");
             StringJoiner joiner = new StringJoiner("\n");
             for (String arg : arguments) {
                 // Options in @argfile need to be properly quoted as
@@ -1641,7 +1640,6 @@ public class NativeImage {
             }
             String joinedOptions = joiner.toString();
             Files.write(argsFile, joinedOptions.getBytes());
-            argsFile.toFile().deleteOnExit();
             return argsFile;
         } catch (IOException e) {
             throw showError(e.getMessage());
@@ -1650,34 +1648,24 @@ public class NativeImage {
 
     protected Path createImageBuilderArgumentFile(List<String> imageBuilderArguments) {
         try {
-            Path argsFile = Files.createTempFile("native-image", ".args");
+            Path argsFile = createFileInTempDir("native-image.args");
             String joinedOptions = String.join("\0", imageBuilderArguments);
             Files.write(argsFile, joinedOptions.getBytes());
-            argsFile.toFile().deleteOnExit();
             return argsFile;
         } catch (IOException e) {
             throw showError(e.getMessage());
         }
     }
 
-    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> cp, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
+    protected int buildImage(List<String> javaArgs, LinkedHashSet<Path> mp, ArrayList<String> imageArgs, LinkedHashSet<Path> imagecp,
                     LinkedHashSet<Path> imagemp) {
         List<String> arguments = new ArrayList<>(javaArgs);
 
-        if (!cp.isEmpty()) {
-            arguments.addAll(Arrays.asList("-cp", cp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator))));
-        }
+        assert !mp.isEmpty() : "Empty builder module-path";
+        List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
+        arguments.addAll(strings);
 
-        if (!mp.isEmpty()) {
-            List<String> strings = Arrays.asList("--module-path", mp.stream().map(Path::toString).collect(Collectors.joining(File.pathSeparator)));
-            arguments.addAll(strings);
-        }
-
-        if (useBundle()) {
-            LogUtils.warning("Native Image Bundles are an experimental feature.");
-        }
-
-        BiFunction<Path, BundleMember.Role, Path> substituteAuxiliaryPath = useBundle() ? bundleSupport::substituteAuxiliaryPath : (a, b) -> a;
+        BiFunction<Path, BundleMember.Role, Path> substituteAuxiliaryPath = useBundle() ? bundleSupport::substituteAuxiliaryPath : (a, _) -> a;
         Function<String, String> imageArgsTransformer = rawArg -> apiOptionHandler.transformBuilderArgument(rawArg, substituteAuxiliaryPath);
         List<String> finalImageArgs = imageArgs.stream().map(imageArgsTransformer).collect(Collectors.toList());
 
@@ -1738,12 +1726,7 @@ public class NativeImage {
              */
             keepAliveFile = Path.of("/proc/" + ProcessHandle.current().pid() + "/comm");
         } else {
-            try {
-                keepAliveFile = Files.createTempFile(".native_image", "alive");
-                keepAliveFile.toFile().deleteOnExit();
-            } catch (IOException e) {
-                throw showError("Temporary keep-alive file could not be created");
-            }
+            keepAliveFile = createFileInTempDir(".native_image.alive");
         }
 
         boolean useContainer = useBundle() && bundleSupport.useContainer;
@@ -1775,7 +1758,7 @@ public class NativeImage {
             }
             int exitStatusCode = bundleSupport.containerSupport.initializeImage();
             switch (ExitStatus.of(exitStatusCode)) {
-                case OK -> {
+                case OK, CONTAINER_REUSE -> {
                 }
                 case BUILDER_ERROR -> {
                     /* Exit, builder has handled error reporting. */
@@ -1827,19 +1810,7 @@ public class NativeImage {
         if (OS.WINDOWS.isCurrent()) {
             WindowsBuildEnvironmentUtil.propagateEnv(environment);
         }
-        environment.put(ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM, Boolean.toString(config.modulePathBuild));
-        if (!config.modulePathBuild) {
-            /**
-             * The old mode of running the image generator on the class path, which was deprecated
-             * in GraalVM 22.2, is no longer allowed. Using the environment variable
-             * `USE_NATIVE_IMAGE_JAVA_PLATFORM_MODULE_SYSTEM=false` that used to enable the
-             * class-path-mode now leads to an early image build error. We really want to report
-             * this as an error, because just ignoring the environment variable would most likely
-             * lead to obscure image build errors later on.
-             */
-            throw showError("Running the image generator on the class path is no longer possible. Setting the environment variable " +
-                            ModuleSupport.ENV_VAR_USE_MODULE_SYSTEM + "=false is no longer supported.");
-        }
+        environment.put(SharedConstants.DRIVER_TEMP_DIR_ENV_VARIABLE, config.driverTempDir.toString());
 
         completeCommandList.addAll(0, environment.entrySet().stream().map(e -> e.getKey() + "=" + e.getValue()).sorted().toList());
         completeCommandList.add(javaExecutable);
@@ -1862,7 +1833,14 @@ public class NativeImage {
 
         Process p = null;
         try {
-            p = pb.inheritIO().start();
+            if (!useBundle()) {
+                pb.inheritIO();
+            }
+            p = pb.start();
+            if (useBundle()) {
+                ProcessOutputTransformer.attach(p.getInputStream(), bundleSupport::cleanupBuilderOutput, System.out);
+                ProcessOutputTransformer.attach(p.getErrorStream(), bundleSupport::cleanupBuilderOutput, System.err);
+            }
             imageBuilderPid = p.pid();
             return p.waitFor();
         } catch (IOException | InterruptedException e) {
@@ -1871,6 +1849,44 @@ public class NativeImage {
             if (p != null) {
                 p.destroy();
             }
+        }
+    }
+
+    private record ProcessOutputTransformer(InputStream in, Function<String, String> mapper, PrintStream out) implements Runnable {
+
+        static void attach(InputStream in, Function<String, String> mapper, PrintStream out) {
+            Thread.ofVirtual().start(new ProcessOutputTransformer(in, mapper, out));
+        }
+
+        @Override
+        public void run() {
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(in))) {
+                reader.lines().map(mapper).forEach(out::println);
+            } catch (IOException e) {
+                throw showError("Unable to process stdout/stderr of image builder process", e);
+            }
+        }
+    }
+
+    /**
+     * Creates a file with name 'fileName' in the {@link NativeImage#driverTempDir temporary
+     * directory} and returns the path to the newly created file. Note: the file will be deleted if
+     * it already exists.
+     *
+     * @param fileName the name of file to create in the temporary directory.
+     * @return the path to the newly created file.
+     */
+    private Path createFileInTempDir(String fileName) {
+        Objects.requireNonNull(fileName);
+        try {
+            Path path = driverTempDir.resolve(fileName);
+            Files.deleteIfExists(path);
+            Files.createFile(path);
+            return path;
+        } catch (InvalidPathException e) {
+            throw showError("Invalid path for file in temp directory: " + e.getMessage());
+        } catch (IOException e) {
+            throw showError("Unable to create file in temp directory: " + e.getMessage());
         }
     }
 
@@ -1884,8 +1900,8 @@ public class NativeImage {
         }
     }
 
-    private Map<String, Path> getModulesFromPath(Collection<Path> modulePath) {
-        if (!config.modulePathBuild || modulePath.isEmpty()) {
+    private static Map<String, Path> getModulesFromPath(Collection<Path> modulePath) {
+        if (modulePath.isEmpty()) {
             return Map.of();
         }
 
@@ -1905,7 +1921,7 @@ public class NativeImage {
     }
 
     private Set<String> getImplicitlyRequiredSystemModules(Collection<Path> modulePath) {
-        if (!config.modulePathBuild || modulePath.isEmpty()) {
+        if (modulePath.isEmpty()) {
             return Set.of();
         }
 
@@ -1956,19 +1972,9 @@ public class NativeImage {
     }
 
     private static void sanitizeJVMEnvironment(Map<String, String> environment, Map<String, String> imageBuilderEnvironment) {
-        Set<String> requiredKeys = new HashSet<>(List.of("PATH", "PWD", "HOME", "LANG", "LANGUAGE"));
-        Function<String, String> keyMapper;
-        if (OS.WINDOWS.isCurrent()) {
-            requiredKeys.addAll(List.of("TEMP", "INCLUDE", "LIB"));
-            keyMapper = s -> s.toUpperCase(Locale.ROOT);
-        } else {
-            keyMapper = Function.identity();
-        }
         Map<String, String> restrictedEnvironment = new HashMap<>();
         environment.forEach((key, val) -> {
-            String mappedKey = keyMapper.apply(key);
-            // LC_* are locale vars that override LANG for specific categories (or all, with LC_ALL)
-            if (requiredKeys.contains(mappedKey) || mappedKey.startsWith("LC_")) {
+            if (EnvironmentVariable.isKeyRequired(key)) {
                 restrictedEnvironment.put(key, val);
             }
         });
@@ -1977,8 +1983,9 @@ public class NativeImage {
             if (entry.getValue() != null) {
                 restrictedEnvironment.put(entry.getKey(), entry.getValue());
             } else {
+                EnvironmentVariable imageBuilderEnvironmentVariable = EnvironmentVariable.of(entry);
                 environment.forEach((key, val) -> {
-                    if (keyMapper.apply(key).equals(keyMapper.apply(entry.getKey()))) {
+                    if (imageBuilderEnvironmentVariable.keyEquals(key)) {
                         /*
                          * Record key as it was given by -E<key-name> (by using `entry.getKey()`
                          * instead of `key`) to allow creating bundles on Windows that will also
@@ -2005,19 +2012,6 @@ public class NativeImage {
 
     public static void main(String[] args) {
         performBuild(new BuildConfiguration(Arrays.asList(args)), defaultNativeImageProvider);
-    }
-
-    public static List<String> translateAPIOptions(List<String> arguments) {
-        var handler = new APIOptionHandler(defaultNativeImageProvider.apply(new BuildConfiguration(arguments)));
-        var argumentQueue = new ArgumentQueue(OptionOrigin.originDriver);
-        handler.nativeImage.config.args.forEach(argumentQueue::add);
-        List<String> translatedOptions = new ArrayList<>();
-        while (!argumentQueue.isEmpty()) {
-            String translatedOption = handler.translateOption(argumentQueue);
-            String originalOption = argumentQueue.poll();
-            translatedOptions.add(translatedOption != null ? translatedOption : originalOption);
-        }
-        return translatedOptions;
     }
 
     protected static void performBuild(BuildConfiguration config, Function<BuildConfiguration, NativeImage> nativeImageProvider) {
@@ -2069,6 +2063,13 @@ public class NativeImage {
                         build(new FallbackBuildConfiguration(nativeImage), nativeImageProvider);
                         LogUtils.warning("Image '" + nativeImage.imageName + "' is a fallback image that requires a JDK for execution (use --" + SubstrateOptions.OptionNameNoFallback +
                                         " to suppress fallback image generation and to print more detailed information why a fallback image was necessary).");
+                        break;
+                    case REBUILD_AFTER_ANALYSIS:
+                        build(config, buildConfig -> {
+                            NativeImage rebuildNativeImage = nativeImageProvider.apply(buildConfig);
+                            rebuildNativeImage.addImageBuilderJavaArgs(String.format("-D%s=true", SharedConstants.REBUILD_AFTER_ANALYSIS_MARKER));
+                            return rebuildNativeImage;
+                        });
                         break;
                     case OUT_OF_MEMORY, OUT_OF_MEMORY_KILLED:
                         nativeImage.showOutOfMemoryWarning();
@@ -2122,10 +2123,6 @@ public class NativeImage {
 
     public void addLimitedModules(String limitModulesArg) {
         limitModules.addAll(Arrays.asList(SubstrateUtil.split(limitModulesArg, ",")));
-    }
-
-    void addImageBuilderClasspath(Path classpath) {
-        imageBuilderClasspath.add(canonicalize(classpath));
     }
 
     void addImageProvidedJars(Path path) {
@@ -2239,8 +2236,6 @@ public class NativeImage {
     }
 
     void addImageModulePath(Path modulePathEntry, boolean strict, boolean processMetaInf) {
-        enableModulePathBuild();
-
         Path mpEntry;
         try {
             mpEntry = canonicalize(modulePathEntry);
@@ -2369,16 +2364,8 @@ public class NativeImage {
         jarOptionMode = val;
     }
 
-    void setModuleOptionMode(boolean val) {
-        enableModulePathBuild();
-        moduleOptionMode = val;
-    }
-
-    private void enableModulePathBuild() {
-        if (!config.modulePathBuild) {
-            NativeImage.showError("Module options not allowed in this image build. Reason: " + config.imageBuilderModeEnforcer);
-        }
-        config.modulePathBuild = true;
+    void enableModuleOption() {
+        moduleOptionMode = true;
     }
 
     boolean isVerbose() {
@@ -2444,7 +2431,7 @@ public class NativeImage {
 
     void showOutOfMemoryWarning() {
         String xmxFlag = "-Xmx";
-        String lastMaxHeapValue = imageBuilderArgs.stream().filter(arg -> arg.startsWith(xmxFlag)).reduce((first, second) -> second).orElse(null);
+        String lastMaxHeapValue = imageBuilderArgs.stream().filter(arg -> arg.startsWith(xmxFlag)).reduce((_, second) -> second).orElse(null);
         String maxHeapText = lastMaxHeapValue == null ? "" : " (The maximum heap size of the process was set with '" + lastMaxHeapValue + "'.)";
         String additionalAction = lastMaxHeapValue == null ? "" : " or increase the maximum heap size using the '" + xmxFlag + "' option";
         showMessage("The Native Image build process ran out of memory.%s%nPlease make sure your build system has more memory available%s.", maxHeapText, additionalAction);
